--- a/main.css
+++ b/main.css
@@ -10,8 +10,195 @@ body {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    backdrop-filter: greyscale;
     padding-top: 1.2rem;
 }
+
+/* nav bar  */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+/* custom scroll bar */
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+::selection {
+    background: rgb(0, 123, 255, 0.3);
+}
+
+.content {
+    max-width: 1250px;
+    margin: auto;
+    padding: 0 30px;
+}
+
+.navbar {
+    position: fixed;
+    width: 100%;
+    z-index: 2;
+    padding: 25px 0;
+    transition: all 0.3s ease;
+}
+
+.navbar.sticky {
+    background: #1b1b1b;
+    padding: 10px 0;
+    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1);
+}
+
+.navbar .content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar .logo a {
+    color: #fff;
+    font-size: 30px;
+    font-weight: 600;
+    text-decoration: none;
+}
+
+.navbar .menu-list {
+    display: inline-flex;
+}
+
+.menu-list li {
+    list-style: none;
+}
+
+.menu-list li a {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    margin-left: 25px;
+    text-decoration: none;
+    transition: all 0.3s ease;
+}
+
+.menu-list li a:hover {
+    color: #007bff;
+}
+
+.banner {
+    background: url("bg1.jpg") no-repeat;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.about {
+    padding: 30px 0;
+}
+
+.about .title {
+    font-size: 38px;
+    font-weight: 700;
+}
+
+.about p {
+    padding-top: 20px;
+    text-align: justify;
+}
+
+.icon {
+    color: #fff;
+    font-size: 20px;
+    cursor: pointer;
+    display: none;
+}
+
+.menu-list .cancel-btn {
+    position: absolute;
+    right: 30px;
+    top: 20px;
+}
+.home {
+    display: none;
+}
+
+@media (max-width: 1230px) {
+    .content {
+        padding: 0 60px;
+    }
+}
+
+@media (max-width: 1100px) {
+    .content {
+        padding: 0 40px;
+    }
+}
+
+@media (max-width: 900px) {
+    .content {
+        padding: 0 30px;
+    }
+}
+
+@media (max-width: 868px) {
+    body.disabled {
+        overflow: hidden;
+    }
+    .icon {
+        display: block;
+    }
+    .icon.hide {
+        display: none;
+    }
+    .navbar .menu-list {
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        max-width: 400px;
+        left: -100%;
+        top: 0px;
+        display: block;
+        padding: 40px 0;
+        text-align: center;
+        background: #222;
+        transition: all 0.3s ease;
+    }
+    .navbar.show .menu-list {
+        left: 0%;
+    }
+    .navbar .menu-list li {
+        margin-top: 45px;
+    }
+    .navbar .menu-list li a {
+        font-size: 23px;
+        margin-left: -100%;
+        transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    }
+    .navbar.show .menu-list li a {
+        margin-left: 0px;
+    }
+    .home {
+        display: block;
+    }
+}
+
+@media (max-width: 380px) {
+    .navbar .logo a {
+        font-size: 27px;
+    }
+}
+
 
 /* Horizontal list */
 
@@ -25,7 +212,7 @@ body {
     display: inline;
     margin: 0px 8px 8px 0px;
     font-weight: 100;
-    font-size: 0.9rem;
+    font-size: 1rem;
 }
 
 .Horizontal-list li a {
@@ -36,6 +223,8 @@ body {
 .nav-menu li a {
     transition: color 0.5s;
     border-bottom: 4s;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
 }
 
 .nav-menu li a:hover {
@@ -71,7 +260,8 @@ body {
     font-size: 3rem;
     letter-spacing: 0.1rem;
     color: white;
-    font-weight: 700;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
     margin-bottom: 0.4rem;
 }
 
@@ -135,7 +325,7 @@ section:nth-child(2n) {
     background-color: #9e9b9b29;
 }
 
-section:nth-child(2n + 1) {
+section:nth-child(2n+1) {
     background-color: white;
 }
 
@@ -215,6 +405,7 @@ section:nth-child(2n + 1) {
 .mb-purple {
     background-color: rgb(241, 92, 227);
 }
+
 .mb-orange {
     background-color: rgb(245, 158, 66);
 }
@@ -258,7 +449,7 @@ section:nth-child(2n + 1) {
     width: 15px;
     height: 15px;
     background-color: lightgrey;
-    top: 25%;
+    top: 20%;
     border-radius: 50%;
     z-index: 1;
 }
@@ -268,11 +459,11 @@ section:nth-child(2n + 1) {
 }
 
 .timeline-box:nth-child(2n+1)::after {
-    right: -11.8%;
+    right: -14.5%;
 }
 
 .timeline-box:nth-child(2n)::after {
-    left: -9%;
+    left: -8.7%;
 }
 
 .timeline-container {
@@ -409,15 +600,13 @@ section:nth-child(2n + 1) {
     color: white;
 }
 
-
-
 /* Contact Form */
 
 #contact {
     background-color: #0abcf9;
     background-image: linear-gradient(50deg, #2857a4 0%, #403066 74%);
     color: white;
-    padding-bottom: 40px;
+    /* padding-bottom: 40px; */
 }
 
 #contact h1, #contact h1 span {
@@ -425,16 +614,28 @@ section:nth-child(2n + 1) {
 }
 
 #contact-form {
-    margin-left: 20%;
+    /* margin-left: 20%; */
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-between;
+    margin: auto 20px;
 }
 
 #contact-container {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #my-details-container {
-    width: 35%;
-    margin-left: 6%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-between;
+    margin: 20px 20px;
 }
 
 #my-details-container h3 {
@@ -444,7 +645,7 @@ section:nth-child(2n + 1) {
 }
 
 #contact-form-container {
-    width: 50%;
+    flex: 1;
 }
 
 #my-details-container p {
@@ -474,16 +675,20 @@ section:nth-child(2n + 1) {
 }
 
 #contact-form input, textarea {
-    max-width: 90%;
-    margin: 15px;
-    padding: 4px 10px;
+    /* max-width: 90%; */
+    /* margin: 15px; */
+    padding: 10px 10px;
     border: 0px solid transparent;
     border-bottom: 2px solid white;
-    color: #d9dcdd;
+    color: #fff;
     background: transparent;
-    width: 90%;
+    /* width: 90%; */
     line-height: 1.6;
     font-size: 1.05rem;
+}
+
+#contact-form input::placeholder, textarea::placeholder {
+    color: #ccc;
 }
 
 #contact-form button[type="submit"] {
@@ -491,7 +696,7 @@ section:nth-child(2n + 1) {
     font-size: 0.95rem;
     border: 2px solid white;
     margin-top: 5%;
-    margin-left: 35%;
+    /* margin-left: 35%; */
     border-radius: 2px;
     color: white;
     font-family: sans-serif;
@@ -500,6 +705,7 @@ section:nth-child(2n + 1) {
     line-height: 1;
     padding: 0.8em 0.8em 0.78em;
     text-transform: uppercase;
+    transition: all 0.5s;
 }
 
 #contact-form button:hover {
@@ -517,25 +723,23 @@ input:focus, select:focus, textarea:focus, button:focus {
     outline: none;
 }
 
+/* responsive css */
 
-
-
-            /* responsive css */
-
-
-@media screen and (max-width:768px) {
-    .checkbtn {
+@media screen and (max-width:572px) {
+    /* .checkbtn {
         display: block;
     }
     nav ul {
-        position: fixed;
+        position: absolute;
+        z-index: 100;
         width: 100%;
         height: 100vh;
         background-color: #2c3e50;
         top: 80px;
         left: -800px;
+        opacity: 0.5;
         text-align: center;
-        transition: all 1.2s;
+        transition: all 1s ease-in-out;
     }
     .responsive li {
         display: block;
@@ -551,5 +755,47 @@ input:focus, select:focus, textarea:focus, button:focus {
     }
     #check:checked ~ ul {
         left: 0;
+        opacity: 1;
+    } */
+    #timeline-divider {
+        left: 4%;
     }
+    .timeline-box {
+        left: 10.5% !important;
+        width: 80%;
+    }
+    /* .timeline-box:nth-child(2n) {
+        left: 12%;
+    } */
+    .timeline-box:nth-child(2n+1)::after {
+        left: -11.8%;
+    }
+    .timeline-box:nth-child(2n)::after {
+        left: -11.8%;
+    }
+    #My-Name {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (max-width:768px) {
+    #timeline-divider {
+        left: 4%;
+    }
+    .timeline-box {
+        left: 12.5% !important;
+        width: 80%;
+    }
+    /* .timeline-box:nth-child(2n) {
+        left: 12%;
+    } */
+    .timeline-box:nth-child(2n+1)::after {
+        left: -11.8%;
+    }
+    .timeline-box:nth-child(2n)::after {
+        left: -11.8%;
+    }
+    /* #My-Name {
+        font-size: 3rem;
+    /* } */
 }
