--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ body {
 
 #main-header {
     height: 65vh;
-    background-image: url(Images/bg1.jpg);
+    background-image: url(Images/bg.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -20,7 +20,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
 }
 
 /* custom scroll bar */
@@ -50,7 +50,7 @@ body {
 .navbar {
     position: fixed;
     width: 100%;
-    z-index: 2;
+    z-index: 3;
     padding: 25px 0;
     transition: all 0.3s ease;
 }
@@ -95,28 +95,6 @@ body {
     color: #007bff;
 }
 
-.banner {
-    background: url("bg1.jpg") no-repeat;
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-}
-
-.about {
-    padding: 30px 0;
-}
-
-.about .title {
-    font-size: 38px;
-    font-weight: 700;
-}
-
-.about p {
-    padding-top: 20px;
-    text-align: justify;
-}
-
 .icon {
     color: #fff;
     font-size: 20px;
@@ -129,6 +107,7 @@ body {
     right: 30px;
     top: 20px;
 }
+
 .home {
     display: none;
 }
@@ -199,7 +178,6 @@ body {
     }
 }
 
-
 /* Horizontal list */
 
 .Horizontal-list {
@@ -234,20 +212,6 @@ body {
 
 .text-center {
     text-align: center;
-}
-
-.checkbtn {
-    font-size: 30px;
-    color: white;
-    float: right;
-    line-height: 40px;
-    margin-right: 20px;
-    cursor: pointer;
-    display: none;
-}
-
-#check {
-    display: none;
 }
 
 /* Name and Social Icons */
@@ -375,9 +339,9 @@ section:nth-child(2n+1) {
 
 .skill-name span {
     color: white;
-    font-size: 1rem;
-    margin-left: 0.5rem;
-    vertical-align: middle;
+    font-size: 1rem !important;
+    margin-left: 0.5rem !important;
+    vertical-align: middle !important;
 }
 
 /* skills background color */
@@ -654,7 +618,8 @@ section:nth-child(2n+1) {
 }
 
 .my-details-info-container {
-    margin-bottom: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     color: #d9dcdd;
     font-size: 1rem;
 }
@@ -725,77 +690,62 @@ input:focus, select:focus, textarea:focus, button:focus {
 
 /* responsive css */
 
-@media screen and (max-width:572px) {
-    /* .checkbtn {
-        display: block;
-    }
-    nav ul {
-        position: absolute;
-        z-index: 100;
-        width: 100%;
-        height: 100vh;
-        background-color: #2c3e50;
-        top: 80px;
-        left: -800px;
-        opacity: 0.5;
-        text-align: center;
-        transition: all 1s ease-in-out;
-    }
-    .responsive li {
-        display: block;
-        margin: 50px 0;
-        line-height: 30px;
-    }
-    nav ul li a{
-        font-size: 20px;
-    }
-    a:hover,a.active {
-        background-color: none;
-        color: #0082e6;
-    }
-    #check:checked ~ ul {
-        left: 0;
-        opacity: 1;
-    } */
-    #timeline-divider {
-        left: 4%;
-    }
-    .timeline-box {
-        left: 10.5% !important;
-        width: 80%;
-    }
-    /* .timeline-box:nth-child(2n) {
-        left: 12%;
-    } */
-    .timeline-box:nth-child(2n+1)::after {
-        left: -11.8%;
-    }
-    .timeline-box:nth-child(2n)::after {
-        left: -11.8%;
-    }
-    #My-Name {
-        font-size: 2rem;
-    }
-}
-
 @media screen and (max-width:768px) {
     #timeline-divider {
         left: 4%;
     }
     .timeline-box {
         left: 12.5% !important;
-        width: 80%;
+        width: 90%;
     }
     /* .timeline-box:nth-child(2n) {
         left: 12%;
     } */
     .timeline-box:nth-child(2n+1)::after {
-        left: -11.8%;
+        left: -11%;
     }
     .timeline-box:nth-child(2n)::after {
-        left: -11.8%;
+        left: -11%;
     }
     /* #My-Name {
         font-size: 3rem;
     /* } */
+}
+
+@media screen and (max-width:572px) {
+    #timeline-divider {
+        left: 4%;
+    }
+    .timeline-box {
+        left: 10.5% !important;
+        width: 90%;
+    }
+    /* .timeline-box:nth-child(2n) {
+        left: 12%;
+    } */
+    .timeline-box:nth-child(2n+1)::after {
+        left: -10%;
+    }
+    .timeline-box:nth-child(2n)::after {
+        left: -10%;
+    }
+    #My-Name {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (max-width:380px) {
+    #timeline-divider {
+        left: 0.1%;
+    }
+    .timeline-box {
+        left: 10.5% !important;
+        width: 90%;
+    }
+    .timeline-box:nth-child(2n+1)::after {
+        left: -15.05%;
+    }
+    .timeline-box:nth-child(2n)::after {
+        left: -15.05%;
+    }
 }
